# seedr_api

./: .gitignore  CHANGELOG.md  README.md  STYLE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/seedr_api/: __init__.py  _http.py  _version.py  client.py  exceptions.py
src/seedr_api/models/: __init__.py  auth.py  filesystem.py  media.py  tasks.py  user.py
src/seedr_api/resources/: __init__.py  _base.py  auth.py  downloads.py  filesystem.py  presentations.py  search.py  subtitles.py  tasks.py  user.py
tests/: conftest.py  test_auth.py  test_client.py  test_exceptions.py  test_filesystem.py  test_search_presentations.py  test_subtitles_downloads.py  test_tasks.py  test_user.py
