[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "seedr_api"
dynamic = ["version"]
description = "An async Python client library for the Seedr API."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Naveen Kumar Lankotu", email = "lankotunaveen@gmail.com" }]
keywords = ["seedr", "torrent", "api", "async", "aiohttp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Communications :: File Sharing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "mypy>=1.9",
    "ruff>=0.4",
    "coverage[toml]>=7.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/Ns-AnoNymouS/seedr-api"
Documentation = "https://github.com/Ns-AnoNymouS/seedr-api#readme"
Repository = "https://github.com/Ns-AnoNymouS/seedr-api"
"Bug Tracker" = "https://github.com/Ns-AnoNymouS/seedr-api/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/seedr_api"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "CHANGELOG.md", "LICENSE"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "RUF", # ruff-specific
]
ignore = ["S101", "S105", "ANN401", "E501"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "ANN", "S"]
"src/seedr_api/__init__.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["seedr_api"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/seedr_api"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "aioresponses.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["seedr_api"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
